# Carousify

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  requirements.txt
backend/app/: main.py  schemas.py
backend/app/models/: __init__.py  database.py  models.py
backend/app/routes/: __init__.py  ai.py  auth.py  export.py  projects.py  templates.py
backend/app/services/: __init__.py  ai_service.py  auth_service.py  image_service.py
desktop/: .env.example  index.html  package-lock.json  package.json
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
shared/: constants.ts
shared/templates/: index.ts
shared/types/: index.ts
web/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.js
web/app/: layout.tsx  page.tsx
web/components/: CanvasEditor.tsx  Header.tsx  ImageEditor.tsx  ProjectList.tsx  TemplateGallery.tsx
web/components/ui/: Button.tsx  Card.tsx  Input.tsx  Loader.tsx  Modal.tsx
web/lib/: api.ts  export.ts  useKeyboardShortcuts.ts  useProject.ts  utils.ts
web/store/: projectStore.ts
web/styles/: globals.css
web/types/: index.ts
