[package]
name = "carousify"
version = "1.0.0"
description = "Instagram Grid Carousel Maker"
authors = ["Manav Arya"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "dialog-all", "fs-all", "path-all", "notification-all", "global-shortcut-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
base64 = "0.22"
zip = "2.1"
</dependencies>

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
